# DepthRenderer

./: CMakeLists.txt  README.md  Renderer.cpp  Renderer.h  main.cpp
camera/: Extrinsic.hpp
common/: CommonIO.hpp  CommonIO.inl
data/: extrinsics.txt  intrinsics.txt
data/parameters/0001/: world2depth.xml
data/parameters/0002/: world2depth.xml
data/parameters/0003/: depth_intrinsic.xml  world2depth.xml
data/parameters/0004/: world2depth.xml
data/parameters/0005/: world2depth.xml
data/parameters/0006/: world2depth.xml
mesh/: Geometry.hpp  Geometry.inl
shader/: depth_frag.h  depth_vs.h
